syntax = "proto3";

package filesystembackups;

import "cloud/disk_manager/internal/pkg/types/types.proto";

option go_package = "github.com/ydb-platform/nbs/cloud/disk_manager/internal/pkg/services/filesystem_backups/protos";

////////////////////////////////////////////////////////////////////////////////

message CreateFilesystemBackupFromFilesystemRequest {
    types.Filesystem SrcFilesystem = 1;
    string DstFilesystemBackupId = 2;
    string FolderId = 3;
    bool UseS3 = 4;
}

message CreateFilesystemBackupFromFilesystemTaskState {
    double MetadataProgress = 1;
    double Progress = 2;
    int64 InodesCount = 3;
    int64 FilesystemBackupSize = 4;
    int64 FilesystemBackupStorageSize = 5;
    string DataplaneTaskID = 6;
}
