syntax = "proto3";

package snapshots;

import "cloud/disk_manager/internal/pkg/types/types.proto";

option go_package = "github.com/ydb-platform/nbs/cloud/disk_manager/internal/pkg/services/snapshots/protos";

////////////////////////////////////////////////////////////////////////////////

message CreateSnapshotFromDiskRequest {
    reserved 4, 5, 6, 7;

    types.Disk SrcDisk = 1;
    string DstSnapshotId = 2;
    string FolderId = 3;
    bool UseS3 = 8;
    bool UseProxyOverlayDisk = 9;
    bool RetryBrokenDRBasedDiskCheckpoint = 10;
}

message CreateSnapshotFromDiskTaskState {
    int64 Offset = 2;
    double Progress = 3;
    int64 SnapshotSize = 4;
    int64 SnapshotStorageSize = 5;
    string DataplaneTaskID = 6;
}
